# sixte

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  HOWTO_add_tools.txt  INSTALL.txt  LICENSE.NOTE  Makefile  Makefile.am  README.md  byte_stream.c  calcJ2perturbations.c  check_fov.h  configure  configure.ac  conv_psf2fits.c  create_htrs_psf.c  create_orbit.c  create_psf.c  create_rmf.c  create_rnd_sctlg.c  create_rnd_source.c  detector.c  detector.h  detector_types.h  doxygen.config  event_list.c  fits_ctlg.c  fits_pha.c  generate_photons.c  generate_photons.h  global_constants.h  htrs_byte_stream.c  mac_solve_sixte_dependencies.sh  measurement.c  measurement.h  measurement_array.c  orbatt.c  orbit_calc.c  (+26 more)
extlib/Utils/: Makefile.am  genutils.cpp  genutils.h  inoututils.cpp  pulseprocess.cpp  pulseprocess.h
extlib/heainit/: Makefile.am  headas.h  headas_init.c  headas_main.c
extlib/heaio/: Makefile.am  headas_stdio.c  headas_stdio.h  headas_stdio_test.c
extlib/heasp/: Makefile.am  MergeARFRMF.c  RMF.c  ReadARF.c  ReadPHA.c  ReadRMF.c  ReturnChannel.c  SPio.c  SPutils.c  TransposeRMF.c  WriteARF.c  WritePHA.c  WriteRMF.c  heasp.h  heaspio.h
extlib/heautils/: HDgtcalf.c  HDgtcalf_f77_wrap.c  HDgtcalf_internal.c  HDgtcalf_internal.h  HDgtcalf_standalone.c  HDgtcalf_standalone.h  HDgtcalf_test.c  Makefile.am  hdcal.h  headas_copykeys.c  headas_copykeys.h  headas_error.c  headas_error.h  headas_error_cfitsio.h  headas_error_init.c  headas_error_internal.h  headas_error_manager.c  headas_error_map.c  headas_file_check.c  headas_gti.c  headas_gti.h  headas_history.c  headas_lock.c  headas_lock.h  headas_parstamp.c  headas_polyfit.c  headas_polyfit.h  headas_rand.c  headas_rand.h  headas_smooth.c  headas_sort.c  headas_svdfit.c  headas_toolname.c  headas_utils.c  headas_utils.h  mt.c  mt.h
extlib/progressbar/: .gitignore  Makefile.am  README.sixte
include/: Makefile.am  astrosources.h  astrosources.types.h  attitudecatalog.h  attitudefile.h  check_fov.h  detector.h  detectors.def.h  detectors.enum.h  detectors.h  detectors.types.h  erositaeventfile.h  erositaeventlistfile.h  eventfile.h  eventlist.h  eventlist.types.h  eventlistfile.h  fits_attitude.h  fits_ctlg.h  fits_pha.h  framestore.h  framestoredetector.h  genericdetector.h  impactlist.h  orbatt.h  photon.h  pointsources.h  psf.h  random.h  random_sixt.h  sixt.h  sourceimage.h  spectrum.h  squarepixels.h  telescope.h  vector.h  vignetting.h  wfidetector.h  wfievent.h  wfieventfile.h  (+1 more)
libraries/: Makefile.am  detector.c  eventlist.c  fits_ctlg.c  orbatt.c  random.c  sources.c  spectrum.c  vector.c
libraries/libastrosources/: Makefile.am  astrosources.h  check_fov.c  extendedsources.h  fits_pha.c  kdtree.c  kdtree.h  lightcurve.h  linlightcurve.c  linlightcurve.h  photon.c  photon.h  photonlist.tpl  photonlistfile.c  photonlistfile.h  pointsourcecatalog.c  pointsourcecatalog.h  pointsourcefile.c  pointsourcefile.h  pointsourcelist.c  pointsourcelist.h  pointsources.c  pointsources.h  sourceimage.c  sourceimage.h  sourcelist.c  sourcelist.h  spectrum.c  spectrum.h
libraries/libdetectors/: Makefile.am  arcpixels.c  arcpixels.h  attitudefile.h  clocklist.c  clocklist.h  coma.eventlist.tpl  comadetector.c  comaevent.h  comaeventfile.c  comaeventfile.h  detector.c  detector.h  epicpn.burst.xml  epicpn.burst.xml.sl  epicpn.c  epicpn.h  epicpn.timing.xml  epicpn.timing.xml.sl  eroframestore.sl  eroframestore.xml  eroframestore.xml.sl  erosita.eventlist.tpl  erositadetectors.c  erositadetectors.h  erositaevent.h  erositaeventfile.c  erositaeventfile.h  eventfile.c  eventfile.h  eventlist.c  framestoredetector.c  framestoredetector.h  gaussianchargecloud.h  gendet.c  gendet.h  gendetline.c  gendetline.h  genericdetector.c  genericdetector.h  (+57 more)
libraries/libmirrors/: Makefile.am  codedmask.c  codedmask.h  psf.c  psf.h  vignetting.c  vignetting.h
libraries/libsatellites/: Makefile.am  attitudecatalog.c  attitudecatalog.h  attitudefile.c  fits_attitude.c  orbatt.c
libraries/libsixt/: Makefile.am  arf.c  arf.h  astrosources.h  attitudecatalog.c  attitudecatalog.h  attitudefile.c  attitudefile.h  badpixmap.c  badpixmap.h  check_fov.c  check_fov.h  clocklist.c  clocklist.h  codedmask.c  codedmask.h  coma.eventlist.tpl  comadet.xml  comadetector.c  comadetector.h  comaevent.h  comaeventfile.c  comaeventfile.h  epicpn.burst.xml  epicpn.burst.xml.sl  epicpn.c  epicpn.fullframe.xml  epicpn.timing.xml  erodetbkgrndgen.c  erodetbkgrndgen.h  eroeventlist.tpl  eroframestore.xml  eroframestore.xml.sl  erosita.eventlist.tpl  erositadetectors.c  erositaeventfile.c  event.c  event.h  eventfile.c  eventfile.h  (+156 more)
libsixt/: Makefile.am  SaveFitsImage.c  aciss3.xml  advdet.c  advdet.h  arcpixels.c  arcpixels.h  arf.c  attitude.c  attitude.h  attitudecatalog.c  attitudecatalog2.c  attitudecatalog2.h  attitudefile.c  attitudefile.h  background.c  background.h  badpixmap.c  badpixmap.h  balancing.c  balancing.h  check_fov.c  check_fov.h  clocklist.c  clocklist.h  codedmask.c  codedmask.h  codedmask2.c  coma.eventlist.tpl  comadetector.c  comadetector.h  comaevent.c  comaevent.h  comaeventfile.c  comaeventfile.h  crosstalk.c  crosstalk.h  det_phi_max.c  det_phi_max.h  detstruct2obj2d.c  (+228 more)
share/instruments/: Makefile.am
share/xml/: Makefile.am
src/: Makefile.am  attitudecatalog.c  attitudefile.c  binary_output.c  binary_output.h  binary_stream.c  byte_output.c  check_fov.c  clusters.c  create_htrs_psf.c  detector.c  detector.h  detectorbackground.c  detectorbackground.h  erosita.eventlist.tpl  erositaevent.h  erositaeventfile.c  erositaeventlistfile.c  event_projection.c  event_projection.par  eventfile.c  eventlist.c  eventlistfile.c  fits_attitude.c  fits_ctlg.c  fits_ctlg.h  fits_pha.c  framestore.c  framestore_simulation.c  framestore_simulation.h  framestore_simulation.par  framestoredetector.c  generate_photons.c  generate_photons.h  genericdetector.c  htrs_psfgen.c  imaging.h  impactlist.c  orbatt.c  photon.c  (+32 more)
test/unit/: .gitignore  data  (+8 more)
tools/: Makefile.am  binary_stream.c  generate_photons.c  generate_photons.h
(+713 files in other folders)
