# Define the headers that will be installed in $(includedir) :
include_HEADERS = sixt.h point.h vector.h telescope.h check_fov.h random_sixt.h \
		spectrum.h photon.h astrosources.h pointsources.h sourceimage.h \
		genericdetector.h squarepixels.h framestoredetector.h wfidetector.h \
		eventlist.h impactlist.h
