# Define the headers that will be installed in $(includedir) :
include_HEADERS = sixt.h point.h vector.h telescope.h check_fov.h random_sixt.h \
		spectrum.h photon.h astrosources.h pointsources.h sourceimage.h \
		fits_pha.h attitudefile.h attitudecatalog.h psf.h vignetting.h \
		detector.h detectors.types.h detectors.def.h detectors.enum.h \
		genericdetector.h squarepixels.h framestoredetector.h wfidetector.h \
		detectorbackground.h eventfile.h \
		wfieventfile.h wfievent.h \
		erositaeventfile.h erositaevent.h \
		impactlist.h
